--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,30 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
  */
+ @import "bootstrap";
+//  @import "font-awesome";
+
+// html, body {
+//   background-image: linear-gradient(to top, #accbee 0%, #e7f0fd 100%);
+//   height: 100%;
+// }
+
+.wrapper {
+  margin: 80px;
+  text-align: center;
+}
+
+.post-card {
+  margin-top: 100px;
+  text-align: left;
+}
+
+.card {
+  margin:30px;
+}
+
+.container {
+  margin-top: 28px;
+  margin-bottom: 28px;
+}
