--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,6 +1,6 @@
 
-<div class='card full-width'>
-  <div class='w-form'>
+<div>
+  <div>
     <%= form_for @post do |f| %>
       <% if @post.errors.any? %>
         <ul>
