--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -1,9 +1,11 @@
 
-<div>
+<div class="post-card">
   <% @posts.each do |post| %>
-    <div>
-      <h3><%= post.title %></h3>
+    <div class="card card-body bg-light">
+      <h3 ><%= post.title %></h3>
       <p><%= post.body %></p>
+      <hr />
+      <p><%= post.created_at %></p>
     </div>
   <% end %>
 </div>
