--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,22 +1,20 @@
 
 <div>
-  <div>
-    <%= form_for @post do |f| %>
-      <% if @post.errors.any? %>
-        <ul>
-        <% @post.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-        </ul>
+  <%= form_for @post do |f| %>
+    <% if @post.errors.any? %>
+      <ul>
+      <% @post.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
       <% end %>
-
-      <%= f.label :title, 'Post Title', class: 'form-field-label' %>
-      <%= f.text_field :title, placeholder: 'Enter title here...', class: 'form-field w-input' %>
-
-      <%= f.label :body, 'Post', class: 'form-field-label' %>
-      <%= f.text_area :body, class: 'form-field w-input' %>
-
-      <%= f.submit 'Submit', class: 'btn-primary w-button' %>
+      </ul>
     <% end %>
-  </div>
+
+    <%= f.label :title, 'Post Title' %>
+    <%= f.text_field :title, placeholder: 'Enter title here...', class: 'form-control' %>
+
+    <%= f.label :body, 'Post' %>
+    <%= f.text_area :body, class: 'form-control' %>
+
+    <%= f.submit 'Submit', class: 'btn-primary w-button' %>
+  <% end %>
 </div>
