--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,11 +9,10 @@
       <li class="nav-item active">
         <%= link_to "Home", root_path, class: "navbar-brand" %><span class="sr-only">(current)</span>
       </li>
-      <% if user_signed_in? %>
         <li class="nav-item active">
-          <%= link_to "Add Blog", new_post_path, class: "navbar-brand" %><span class="sr-only">(current)</span>
+          <%= link_to "New Blog", new_post_path, class: "navbar-brand" %><span class="sr-only">(current)</span>
       </li>
-      <% end %>
+
     </ul>
     <ul class="navbar-nav mr-right">
       <% if user_signed_in?%>
