added new devise view files and css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,9 +31,15 @@
 
 .card {
   margin: 30px;
+  background-color: rgb(235, 232, 232);
 }
 
 .container {
   margin-top: 28px;
   margin-bottom: 28px;
+}
+
+.devise-container {
+  margin: auto;
+  padding-top: 80px;
 }
