--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -1,6 +1,6 @@
 <div class="post-card">
   <% @posts.each do |post| %>
-    <div class="card card-body bg-light">
+    <div class="card card-body ">
       <h3 ><%= post.title %></h3>
       <p><%= post.body %></p>
       <hr />
