--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,4 +42,15 @@
 .devise-container {
   margin: auto;
   padding-top: 80px;
+  width: 30%;
+}
+
+.new-post-form {
+  margin: auto;
+  width: 60%;
+
+}
+
+.new-comment {
+  width: 60%;
 }
