--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,9 +1,11 @@
-
-<br/>
-<h3>Comments</h3>
-<% @post.comments.each do |comment| %>
-  <div class="card card-body bg-light">
-    <p><%= comment.body %></p>
-    <p><%= comment.created_at %></p>
-  </div>
-<% end %>
+<div>
+  <br/>
+  <h3>Comments</h3>
+  <hr/>
+  <% @post.comments.each do |comment| %>
+    <div class="card card-body bg-light">
+      <p><%= comment.body %></p>
+      <p><%= comment.created_at %></p>
+    </div>
+  <% end %>
+</div>
