--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div style='width: 70%; margin: auto;'>
   <%= form_for([@post, @post.comments.build]) do |f| %>
 
     <%= f.label :body, 'Comment:' %>
