added user comment limit to 2 per day but need to fix bug on comment limit per post

--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,9 +1,8 @@
-<div>
-  <br/>
+<div class="post-card">
   <h3>Comments</h3>
   <hr/>
   <% @post.comments.each do |comment| %>
-    <div class="card card-body bg-light">
+    <div class="card card-body">
       <p><%= comment.body %></p>
       <p><%= comment.created_at %></p>
     </div>
