--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,10 +14,17 @@
  @import "bootstrap";
 //  @import "font-awesome";
 
-// html, body {
-//   background-image: linear-gradient(to top, #accbee 0%, #e7f0fd 100%);
-//   height: 100%;
-// }
+#navbar {
+  background-color: #3b5998;
+}
+
+#navbar a {
+color: white;
+}
+
+#navbar-app-name {
+  font-size: 28px;
+}
 
 .wrapper {
   margin: 60px;
@@ -25,7 +32,7 @@
 }
 
 .post-card {
-  margin-top: 60px;
+  margin-top: 30px;
   text-align: left;
 }
 
