--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,8 @@
 <div class="post-card">
-  <div class="card card-body bg-light">
+  <div class="card card-body">
     <h3 ><%= @post.title %></h3>
     <p><%= @post.body %></p>
-    <hr />
-    <p><%= @post.created_at %></p>
+    <p><i>Created on </i><%= @post.created_at.strftime("%b %d, %Y") %></p>
   </div>
   <% if user_signed_in? %>
     <%= render 'comments/form' %>
