--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: darkgray;" >
-  <%= link_to "JustBlogIt", root_path, class: "navbar-brand" %>
+<nav class="navbar navbar-expand-lg navbar-light" id="navbar">
+  <%= link_to "JustBlogIt", root_path, class: "navbar-brand", id: "navbar-app-name" %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
