--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,8 +11,13 @@
  * It is generally better to create a new file per style scope.
  *
  */
- @import "bootstrap";
+@import "bootstrap";
 //  @import "font-awesome";
+@import url('https://fonts.googleapis.com/css?family=Bungee+Inline&display=swap');
+
+// * {
+//   background-image: url("https://img.pixers.pics/pho_wat(s3:700/FO/83/63/91/0/700_FO8363910_97006ba8ab96ec11007845b0fe688491.jpg,592,700,cms:2018/10/5bd1b6b8d04b8_220x50-watermark.png,over,372,650,jpg)/wall-murals-light-pink-stripe-background.jpg.jpg")
+// }
 
 #navbar {
   background-color: #3b5998;
@@ -24,6 +29,12 @@ color: white;
 
 #navbar-app-name {
   font-size: 28px;
+}
+
+.blog-title {
+  font-size: 70px;
+  font-family: 'Bungee Inline', cursive;
+  color: rgb(58, 56, 56);
 }
 
 .wrapper {
@@ -42,7 +53,7 @@ color: white;
 }
 
 .container {
-  margin-top: 28px;
+  margin-top: 20px;
   margin-bottom: 28px;
 }
 
@@ -60,4 +71,15 @@ color: white;
 
 .new-comment {
   width: 60%;
+}
+
+#instructions-btn {
+  margin-top: 30px;
+}
+
+.instructions-links {
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  padding: 30px;
 }
