--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -4,7 +4,7 @@
       <h3 ><%= post.title %></h3>
       <p><%= post.body %></p>
       <hr />
-      <p><i>Created on </i><%= post.created_at.strftime("%b %d, %Y") %></p>
+      <p style="color:gray;"><i>Created on </i><%= post.created_at.strftime("%b %d, %Y") %></p>
       <div>
         <%= link_to 'Read More...', post_path(post), :class => 'btn btn-secondary' %>
       </div>
