--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -3,11 +3,16 @@
     <div class="card card-body ">
       <h3 ><%= post.title %></h3>
       <p><%= post.body %></p>
-      <hr />
       <p style="color:gray;"><i>Created on </i><%= post.created_at.strftime("%b %d, %Y") %></p>
       <div>
         <%= link_to 'Read More...', post_path(post), :class => 'btn btn-secondary' %>
       </div>
+      <hr/>
+      <% if post.comments.all.length <= 1 %>
+        <p class="comment-indicator"><%= post.comments.all.length %><i> comment</i></p>
+      <% else %>
+        <p class="comment-indicator"><%= post.comments.all.length %><i> comments</i></p>
+      <% end %>
     </div>
   <% end %>
 </div>
