--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
   <div class="card card-body">
     <h3 ><%= @post.title %></h3>
     <p><%= @post.body %></p>
-    <p><i>Created on </i><%= @post.created_at.strftime("%b %d, %Y") %></p>
+    <p><i style="color:gray;">Created on </i><%= @post.created_at.strftime("%b %d, %Y") %></p>
   </div>
   <% if user_signed_in? %>
     <%= render 'comments/form' %>
