--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,17 +14,24 @@
 @import "bootstrap";
 //  @import "font-awesome";
 @import url('https://fonts.googleapis.com/css?family=Bungee+Inline&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Comfortaa&display=swap');
 
 #navbar {
-  background-color: #3b5998;
+  background-color: #323233;
 }
 
 #navbar a {
 color: white;
+font-family: 'Comfortaa', cursive;
+
 }
 
 #navbar-app-name {
   font-size: 28px;
+}
+
+body {
+  background-color: rgb(138, 199, 219)
 }
 
 .blog-title {
@@ -32,6 +39,24 @@ color: white;
   font-family: 'Bungee Inline', cursive;
   color: rgb(58, 56, 56);
   text-align: center;
+}
+
+.new-blog-title {
+  font-family: 'Bungee Inline', cursive;
+  color: rgb(58, 56, 56);
+  font-size: 70px;
+  text-align: center;
+}
+
+.post-title {
+  padding: 18px;
+  font-family: 'Bungee Inline', cursive;
+
+}
+
+.post-body {
+  padding: 18px;
+  font-family: 'Comfortaa', cursive;
 }
 
 .wrapper {
@@ -82,4 +107,7 @@ color: white;
 
 .comment-indicator {
   text-align: right;
+  padding-left: 18px;
+  padding-right: 18px;
+  color: gray;
 }
