--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -3,8 +3,8 @@
   <hr/>
   <% @post.comments.each do |comment| %>
     <div class="card card-body">
-      <p><%= comment.body %></p>
-      <p><%= comment.created_at.strftime("%b %d, %Y") unless comment.created_at.nil? %></p>
+      <p class="post-body" ><%= comment.body %></p>
+      <p class="post-body" ><%= comment.created_at.strftime("%b %d, %Y") unless comment.created_at.nil? %></p>
     </div>
   <% end %>
 </div>
