--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -1,10 +1,10 @@
 <div class="post-card">
   <% @posts.each do |post| %>
     <div class="card card-body ">
-      <h3 ><%= post.title %></h3>
-      <p><%= post.body %></p>
+      <h3 class="post-title"><%= post.title %></h3>
+      <p class="post-body"><%= post.body %></p>
       <p style="color:gray;"><i>Created on </i><%= post.created_at.strftime("%b %d, %Y") %></p>
-      <div>
+      <div >
         <%= link_to 'Read More...', post_path(post), :class => 'btn btn-secondary' %>
       </div>
       <hr/>
