--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
 <div class="new-post-form">
-  <h1 style="text-align: center; padding-top: 60px;">New Blog</h1>
+  <h1 class="new-blog-title">New Blog</h1>
   <%= render "form" %>
 </div>
