added username to Users table

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,6 +39,8 @@ body {
   font-family: 'Bungee Inline', cursive;
   color: rgb(58, 56, 56);
   text-align: center;
+  margin: 40px;
+
 }
 
 .new-blog-title {
@@ -46,6 +48,7 @@ body {
   color: rgb(58, 56, 56);
   font-size: 70px;
   text-align: center;
+  margin: 40px;
 }
 
 .post-title {
@@ -65,7 +68,7 @@ body {
 }
 
 .post-card {
-  margin-top: 30px;
+  margin-top: 70px;
   text-align: left;
 }
 
