--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -2,6 +2,7 @@
   <%= form_for([@post, @post.comments.build]) do |f| %>
     <%= f.label :body, 'New Comment:' %>
     <%= f.text_area :body, class: 'form-control' %>
+    <%= f.hidden_field :username, :value => current_user.username  %>
     <br/>
     <%= f.submit 'Submit', class: "btn btn-primary" %>
   <% end %>
