--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,6 +4,11 @@
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
 
+    <div class="form-group">
+      <%= f.label :username, class: "label" %><br />
+      <%= f.text_field :username, autofocus: true, autocomplete: "username", class: "form-control" %>
+    </div>
+
     <div class="field">
       <%= f.label :email, class: "label" %><br />
       <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
