--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,30 +5,34 @@
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
 
-      <div class="form-group">
-        <%= f.label :email, class: "label" %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
-      </div>
+    <div class="form-group">
+      <%= f.label :username, class: "label" %><br />
+      <%= f.text_field :username, autofocus: true, autocomplete: "username", class: "form-control" %>
+    </div>
 
-      <div class="form-group">
-        <%= f.label :password, class: "input" %>
-        <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %><br />
-        <%= f.password_field :password, autocomplete: "new-password", class:"form-control"  %>
-      </div>
+    <div class="form-group">
+      <%= f.label :email, class: "label" %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+    </div>
 
-      <div class="form-group">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"form-control" %>
-      </div>
+    <div class="form-group">
+      <%= f.label :password, class: "input" %>
+      <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
+      <%= f.password_field :password, autocomplete: "new-password", class:"form-control"  %>
+    </div>
 
-      <div class="actions">
-        <%= f.submit "Sign up", class: "btn btn-primary" %>
-        <%= render "devise/shared/links" %>
-      </div>
-      <div class="hr"></div>
-    <% end %>
+    <div class="form-group">
+      <%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"form-control" %>
+    </div>
 
-  </div>
+    <div class="actions">
+      <%= f.submit "Sign up", class: "btn btn-primary" %>
+      <%= render "devise/shared/links" %>
+    </div>
+    <div class="hr"></div>
+  <% end %>
+
 </div>
