added final changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -86,6 +86,8 @@ body {
   margin: auto;
   padding-top: 80px;
   width: 30%;
+  font-family: 'Comfortaa', cursive;
+
 }
 
 .new-post-form {
@@ -113,4 +115,8 @@ body {
   padding-left: 18px;
   padding-right: 18px;
   color: gray;
+}
+
+.actions {
+  margin: auto;
 }
