--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -82,12 +82,15 @@ body {
   margin-bottom: 28px;
 }
 
+.comment-h3 {
+  font-family: 'Comfortaa', cursive;
+}
+
 .devise-container {
   margin: auto;
   padding-top: 80px;
   width: 30%;
   font-family: 'Comfortaa', cursive;
-
 }
 
 .new-post-form {
