--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,5 +1,5 @@
 <div class="post-card">
-  <h3>Comments</h3>
+  <h3 class="comment-h3">Comments</h3>
   <hr/>
   <% @post.comments.each do |comment| %>
     <div class="card card-body">
