--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,7 @@
       <% if user_signed_in?%>
         <li class="nav-item active">
           <a class="nav-link">
-            <%= "logged in as #{current_user.email}" %>
+            <%= "logged in as #{current_user.username}" %>
           </a>
         </li>
         <li class="nav-item active">
